--- a/index.html
+++ b/index.html
@@ -239,6 +239,28 @@
               </a>
             </div>
           </article>
+
+          <article class="project-card">
+            <div class="project-number">04</div>
+            <div class="project-icon">
+              <i class="fas fa-user"></i>
+            </div>
+            <h3 class="project-title">Portfolio Website</h3>
+            <p class="project-desc">Modern portfolio website with dark/light theme toggle, glassmorphism effects, smooth animations, and responsive design. Showcases projects and skills professionally.</p>
+            <div class="project-tags">
+              <span class="tag">Portfolio</span>
+              <span class="tag">Responsive</span>
+              <span class="tag">Theme Toggle</span>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/krishnaa991/PRODIGY_WD_04" target="_blank" rel="noopener noreferrer" class="project-link">
+                <i class="fab fa-github"></i> Source
+              </a>
+              <a href="https://krishnaa991.github.io/PRODIGY_WD_04/" target="_blank" rel="noopener noreferrer" class="project-link">
+                <i class="fas fa-external-link-alt"></i> Live Demo
+              </a>
+            </div>
+          </article>
         </div>
       </div>
     </section>
