--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Krishna Prajapati — Portfolio • PRODIGY_WD_04</title>
   <meta name="description" content="Portfolio of Krishna Prajapati — Web Development Intern at Prodigy InfoTech. Projects, skills, resume and contact." />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
@@ -422,6 +422,6 @@
     </div>
   </footer>
 
-  <script src="js/script.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
