--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="hero-card" aria-hidden="true">
           <div class="card-glow"></div>
           <div class="avatar-circle">
-            <img src="assets/me.PNG" alt="Krishna Prajapati" class="avatar-image" />
+            <img src="me.PNG" alt="Krishna Prajapati" class="avatar-image" />
           </div>
           <div class="hero-card-content">
             <h3 class="card-title">Web Development Intern</h3>
